Find data from github api and insert in the state.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,12 @@
         "ts": "never",
         "tsx": "never"
       }
+    ],
+    "@types-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true
+      }
     ]
   },
   "settings": {
